[tool.poetry]
name = "ibm-quantum"
version = "0.1.0"
description = ""
authors = ["zonda yang <u226699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = {extras = ["visualization"], version = "^1.3.1"}
qiskit-ibm-runtime = "^0.34.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
